Changes to fix broken links.
Signed-off-by: Shwetank Dixit <emailshwetank@gmail.com>

--- a/background_pages.html
+++ b/background_pages.html
@@ -35,7 +35,7 @@ Background pages to the rescue.
 </p>
 
 <p>
-As the <a href="overview.html#arch">architecture overview</a> explains,
+As the <a href="tut_architecture_overview.html#the_background_process">architecture overview</a> explains,
 the background page is an HTML page that runs in the extension process.
 It exists for the lifetime of your extension,
 and only one instance of it at a time is active.
