--- a/contextMenus.html
+++ b/contextMenus.html
@@ -417,7 +417,7 @@ Use the
                                 </code>
                               </dt>
                               <dd>
-                                Lets you restrict the item to apply only to documents whose URL matches one of the given patterns. (This applies to frames as well.) For details on the format of a pattern, see <a href='match_patterns.html'>Match Patterns</a>.
+                                Lets you restrict the item to apply only to documents whose URL matches one of the given patterns. (This applies to frames as well.) For details on the format of a pattern, see <a href='tut_match_patterns.html'>Match Patterns</a>.
                               </dd>
                             </div>
                             <div>
