--- a/tabs.html
+++ b/tabs.html
@@ -391,7 +391,7 @@ create, modify, and rearrange tabs in the browser.
                 </code></div>
                 <div class="description">
                   <p>
-                    Connects to the content script(s) in the specified tab. The <a href="runtime.html#event-onConnect">runtime.onConnect</a> event is fired in each content script running in the specified tab for the current extension. For more details, see <a href='content_scripts.html#messaging'>Content Script Messaging</a>.
+                    Connects to the content script(s) in the specified tab. The <a href="runtime.html#event-onConnect">runtime.onConnect</a> event is fired in each content script running in the specified tab for the current extension. For more details, see <a href='tut_content_scripts.html#messaging'>Content Script Messaging</a>.
                   </p>
                   <h4>Parameters</h4>
                   <dl>
@@ -859,7 +859,7 @@ create, modify, and rearrange tabs in the browser.
                                 </code>
                               </dt>
                               <dd>
-                                Match tabs against a <a href='match_patterns.html'>URL pattern</a>. Note that fragment identifiers are not matched.
+                                Match tabs against a <a href='tut_match_patterns.html'>URL pattern</a>. Note that fragment identifiers are not matched.
                               </dd>
                             </div>
                             <div>
@@ -1507,7 +1507,7 @@ create, modify, and rearrange tabs in the browser.
                 </code></div>
                 <div class="description">
                   <p>
-                    Injects JavaScript code into a page. For details, see the <a href='content_scripts.html#pi'>programmatic injection</a> section of the content scripts doc.
+                    Injects JavaScript code into a page. For details, see the <a href='tut_content_scripts.html#pi'>programmatic injection</a> section of the content scripts doc.
                   </p>
                   <h4>Parameters</h4>
                   <dl>
@@ -1589,7 +1589,7 @@ create, modify, and rearrange tabs in the browser.
                 </code></div>
                 <div class="description">
                   <p>
-                    Injects CSS into a page. For details, see the <a href='content_scripts.html#pi'>programmatic injection</a> section of the content scripts doc.
+                    Injects CSS into a page. For details, see the <a href='tut_content_scripts.html#pi'>programmatic injection</a> section of the content scripts doc.
                   </p>
                   <h4>Parameters</h4>
                   <dl>
