--- a/windows.html
+++ b/windows.html
@@ -50,7 +50,7 @@ create, modify, and rearrange windows in the browser.
                         </span>
                       </dt>
                       <dd>
-                        The ID of the window. Window IDs are unique within a browser session. Under some circumstances a Window may not be assigned an ID, for example when querying closed windows from the <a href="sessionRestore.html">sessionRestore</a> API.
+                        The ID of the window. Window IDs are unique within a browser session. <!--Under some circumstances a Window may not be assigned an ID, for example when querying closed windows from the <a href="sessionRestore.html">sessionRestore</a> API.-->
                       </dd>
                     </div>
                     <div>
@@ -80,7 +80,7 @@ create, modify, and rearrange windows in the browser.
                         </span>
                       </dt>
                       <dd>
-                        The offset of the window from the top edge of the screen in pixels. Under some circumstances a Window may not be assigned top property, for example when querying closed windows from the <a href="sessionRestore.html">sessionRestore</a> API.
+                        The offset of the window from the top edge of the screen in pixels. <!--Under some circumstances a Window may not be assigned top property, for example when querying closed windows from the <a href="sessionRestore.html">sessionRestore</a> API.-->
                       </dd>
                     </div>
                     <div>
@@ -95,7 +95,7 @@ create, modify, and rearrange windows in the browser.
                         </span>
                       </dt>
                       <dd>
-                        The offset of the window from the left edge of the screen in pixels. Under some circumstances a Window may not be assigned left property, for example when querying closed windows from the <a href="sessionRestore.html">sessionRestore</a> API.
+                        The offset of the window from the left edge of the screen in pixels. <!--Under some circumstances a Window may not be assigned left property, for example when querying closed windows from the <a href="sessionRestore.html">sessionRestore</a> API.-->
                       </dd>
                     </div>
                     <div>
@@ -110,7 +110,7 @@ create, modify, and rearrange windows in the browser.
                         </span>
                       </dt>
                       <dd>
-                        The width of the window in pixels. Under some circumstances a Window may not be assigned width property, for example when querying closed windows from the <a href="sessionRestore.html">sessionRestore</a> API.
+                        The width of the window in pixels. <!--Under some circumstances a Window may not be assigned width property, for example when querying closed windows from the <a href="sessionRestore.html">sessionRestore</a> API.-->
                       </dd>
                     </div>
                     <div>
@@ -125,7 +125,7 @@ create, modify, and rearrange windows in the browser.
                         </span>
                       </dt>
                       <dd>
-                        The height of the window in pixels. Under some circumstances a Window may not be assigned height property, for example when querying closed windows from the <a href="sessionRestore.html">sessionRestore</a> API.
+                        The height of the window in pixels. <!--Under some circumstances a Window may not be assigned height property, for example when querying closed windows from the <a href="sessionRestore.html">sessionRestore</a> API.-->
                       </dd>
                     </div>
                     <div>
@@ -170,7 +170,7 @@ create, modify, and rearrange windows in the browser.
                         </span>
                       </dt>
                       <dd>
-                        The type of browser window this is. Under some circumstances a Window may not be assigned type property, for example when querying closed windows from the <a href="sessionRestore.html">sessionRestore</a> API.
+                        The type of browser window this is. <!--Under some circumstances a Window may not be assigned type property, for example when querying closed windows from the <a href="sessionRestore.html">sessionRestore</a> API.-->
                       </dd>
                     </div>
                     <div>
@@ -185,7 +185,7 @@ create, modify, and rearrange windows in the browser.
                         </span>
                       </dt>
                       <dd>
-                        The state of this browser window. Under some circumstances a Window may not be assigned state property, for example when querying closed windows from the <a href="sessionRestore.html">sessionRestore</a> API.
+                        The state of this browser window. <!--Under some circumstances a Window may not be assigned state property, for example when querying closed windows from the <a href="sessionRestore.html">sessionRestore</a> API.-->
                       </dd>
                     </div>
                     <div>
