--- a/management.html
+++ b/management.html
@@ -438,7 +438,7 @@ originalsource: http://developer.chrome.com/trunk/extensions/management.html
                 </code></div>
                 <div class="description">
                   <p>
-                    Returns a list of <a href='permission_warnings.html'>permission warnings</a> for the given extension id.
+                    Returns a list of permission warnings for the given extension id.
                   </p>
                   <h4>Parameters</h4>
                   <dl>
@@ -499,7 +499,7 @@ originalsource: http://developer.chrome.com/trunk/extensions/management.html
                 </code></div>
                 <div class="description">
                   <p>
-                    Returns a list of <a href='permission_warnings.html'>permission warnings</a> for the given extension manifest string. Note: This function can be used without requesting the 'management' permission in the manifest.
+                    Returns a list of permission warnings for the given extension manifest string. Note: This function can be used without requesting the 'management' permission in the manifest.
                   </p>
                   <h4>Parameters</h4>
                   <dl>
