--- a/tut_content_scripts.html
+++ b/tut_content_scripts.html
@@ -84,10 +84,10 @@ These limitations aren't as bad as they sound.
 Content scripts can <em>indirectly</em> use the chrome.* APIs,
 get access to extension data,
 and request extension actions
-by exchanging <a href="messaging.html">messages</a>
+by exchanging <a href="tut_message_passing.html">messages</a>
 with their parent extension.
 Content scripts can also
-make <a href="xhr.html">cross-site XMLHttpRequests</a>
+make cross-site XMLHttpRequests
 to the same sites as their parent extensions,
 and they can
 <a href="#host-page-communication">communicate with web pages</a>
@@ -153,7 +153,7 @@ can have the following properties:</p>
     <td>array of strings</td>
     <td><em>Required.</em>
     Specifies which pages this content script will be injected into.
-    See <a href="match_patterns.html">Match Patterns</a>
+    See <a href="tut_match_patterns.html">Match Patterns</a>
     for more details on the syntax of these strings
     and <a href="#match-patterns-globs">Match patterns and globs</a>
     for information on how to exclude URLs.</td>
@@ -164,7 +164,7 @@ can have the following properties:</p>
     <td><em>Optional.</em>
     Excludes pages that this content script would otherwise be
     injected into.
-    See <a href="match_patterns.html">Match Patterns</a>
+    See <a href="tut_match_patterns.html">Match Patterns</a>
     for more details on the syntax of these strings
     and <a href="#match-patterns-globs">Match patterns and globs</a>
     for information on how to exclude URLs.</td>
@@ -248,7 +248,7 @@ For example, assume <code>matches</code> is <code>["http://*.nytimes.com/*"]</co
 <p>
 
 <p>
-Glob properties follow a different, more flexible syntax than <a href="match_patterns.html">match patterns</a>.  Acceptable glob strings are URLs that may contain "wildcard" asterisks and question marks. The asterisk (*) matches any string of any length (including the empty string); the question mark (?) matches any single character.
+Glob properties follow a different, more flexible syntax than <a href="tut_match_patterns.html">match patterns</a>.  Acceptable glob strings are URLs that may contain "wildcard" asterisks and question marks. The asterisk (*) matches any string of any length (including the empty string); the question mark (?) matches any single character.
 </p>
 
 <p>
@@ -281,7 +281,7 @@ only when the user clicks a browser action's icon.
 <p>
 To insert code into a page,
 your extension must have
-<a href="xhr.html#requesting-permission">cross-origin permissions</a>
+cross-origin permissions
 for the page.
 It also must be able to use the <code>chrome.tabs</code> module.
 You can get both kinds of permission
@@ -406,8 +406,7 @@ document.getElementById("theButton").addEventListener("click", function() {
 <p>When writing a content script, you should be aware of two security issues.
 First, be careful not to introduce security vulnerabilities into the web site
 your content script is injected into.  For example, if your content script
-receives content from another web site (for example, by making an <a
-href="messaging.html">XMLHttpRequest</a>),
+receives content from another web site (for example, by making an XMLHttpRequest),
 be careful to filter that content for <a
 href="http://en.wikipedia.org/wiki/Cross-site_scripting">cross-site
 scripting</a> attacks before injecting the content into the current page.
