fixed broken link in the icon article
Signed-off-by: Shwetank Dixit <emailshwetank@gmail.com>

--- a/tut_icons.html
+++ b/tut_icons.html
@@ -113,7 +113,7 @@ copyright: opera-ccby
 	
 	<p class="note">Note: Even though this tutorial is written with Photoshop in mind, you can still get some useful tips if you decide to use a different graphics package.</p>
 	
-	<p>First of all, open the <a href="user_icon_template.psd">Photoshop (PSD) icon template</a> and save it with a different filename. You can work on your own icon inside this file. This tutorial is written with complete beginners in mind, but even Photoshop veterans may be able to pick up a thing or two.</p>
+	<p>First of all, open the <a href="tatic/templates/user_icon_template.psd">Photoshop (PSD) icon template</a> and save it with a different filename. You can work on your own icon inside this file. This tutorial is written with complete beginners in mind, but even Photoshop veterans may be able to pick up a thing or two.</p>
 	
 	<h3 id="selecting-icon">Selecting an icon</h3>
 	
