various style and consistency cleanups

--- a/tut_content_scripts.html
+++ b/tut_content_scripts.html
@@ -7,6 +7,7 @@ originalsource: http://developer.chrome.com/trunk/extensions/content_scripts.htm
 
       <div id="gc-pagecontent">
         <div id="toc">
+        	<h2>Contents</h2>
           <ol>
             <li>
               <a href=#registration>Manifest</a>
