--- a/tut_match_patterns.html
+++ b/tut_match_patterns.html
@@ -7,6 +7,8 @@ originalsource: http://developer.chrome.com/trunk/extensions/match_patterns.html
 
       <div id="gc-pagecontent">
 
+<h2>Introduction</h2>
+
 <p>
 <a href="tut_content_scripts.html">Content scripts</a> operate on
 a set of URLs defined by match patterns.
@@ -18,6 +20,8 @@ This page describes the match pattern syntax &mdash;
 the rules you need to follow when you specify
 which URLs your content script affects.
 </p>
+
+<h2>What match patterns are</h2>
 
 <p>
 A match pattern is essentially a URL
@@ -54,6 +58,9 @@ Each match pattern has 3 parts:</p>
     or <code>/foo/bar </code>
   </li>
 </ul>
+
+<h2>Match pattern syntax</h2>
+
 
 <p>Here's the basic syntax:</p>
 
